--- a/carbonia/ia/Templates/registro-admin.html
+++ b/carbonia/ia/Templates/registro-admin.html
@@ -39,6 +39,10 @@
             </select>
         </div>
         <div class="input-group">
+            <label for="nomcliente">Sucursal</label>
+            <input type="text" id="nomcliente" name="nomcliente" required>
+        </div>
+        <div class="input-group">
             <label for="emailcliente">Correo Electrónico</label>
             <input type="email" id="emailcliente" name="emailcliente" required aria-describedby="emailError">
             <small id="emailError" class="error-text"></small>
