--- a/carbonia/ia/Templates/registro-admin.html
+++ b/carbonia/ia/Templates/registro-admin.html
@@ -17,7 +17,7 @@
             <input type="text" id="nomcliente" name="nomcliente" required>
         </div>
         <div class="input-group">
-            <label for="dircliente">Dirección Empresa</label>
+            <label for="dircliente">Dirección Casa Matriz</label>
             <input type="text" id="dircliente" name="dircliente">
         </div>
         <div class="input-group">
@@ -38,10 +38,7 @@
                 <option value="">Seleccione una comuna</option>
             </select>
         </div>
-        <div class="input-group">
-            <label for="nomcliente">Sucursal</label>
-            <input type="text" id="nomcliente" name="nomcliente" required>
-        </div>
+        
         <div class="input-group">
             <label for="emailcliente">Correo Electrónico</label>
             <input type="email" id="emailcliente" name="emailcliente" required aria-describedby="emailError">
